# polliwog

./: .coveragerc  .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  bootstrap.zsh  dev.py  netlify.toml  pyproject.toml  requirements.txt  requirements_dev.txt  requirements_dev_common.txt  requirements_dev_py2.txt  requirements_dev_py3.txt  requirements_doc.txt  setup.py
.circleci/: config.yml
.github/: dependabot.yml
.github/workflows/: codeql.yml  main.yml
.github/workflows/common/: action.yml
doc/: conf.py  index.md
polliwog/: __init__.py  package_version.py
polliwog/_common/: pathlib.py  serialization.py  shape.py  test_pathlib.py  test_shape.py
polliwog/_temporary/: coercion.py  decorators.py  matlab.py  predicates.py  rounding.py  test_coercion.py  test_predicates.py  test_rounding.py  test_units.py  units.py
polliwog/box/: _box_object.py  box.py  test_box.py  test_box_object.py
polliwog/convex_hull/: convexify.py  test_convexify.py
polliwog/line/: __init__.py  _line_functions.py  _line_intersect.py  _line_object.py  functions.py  line.py  line_intersect.py  test_functions.py  test_line.py  test_line_intersect.py  test_line_object.py
polliwog/plane/: __init__.py  _plane_functions.py  _plane_intersect.py  _plane_object.py  _slicing.py  _trimesh_intersections.py  coordinate_planes.py  equations.py  functions.py  intersections.py  plane.py  test_coordinate_planes.py  test_equations.py  test_functions.py  test_intersections.py  test_plane.py  test_plane_object.py  test_slicing.py
polliwog/pointcloud/: __init__.py  _pointcloud_functions.py  test_pointcloud_functions.py
polliwog/polyline/: __init__.py  _array.py  _edges.py  _inflection_points.py  _polyline_object.py  _slice_by_plane.py  _try_inflection_points.py  cut_by_plane.py  inflection_points.py  polyline.py  test_array.py  test_cut_by_plane.py  test_inflection_points.py  test_polyline.py  test_polyline_object.py  test_slice_by_plane.py  try_inflection_points.py
polliwog/segment/: __init__.py  _segment_functions.py  segment.py  test_segment.py  test_segment_functions.py
polliwog/shapes/: __init__.py  _shapes.py  shapes.py  test_shapes.py
polliwog/transform/: __init__.py  _affine_transform.py  _apply.py  _composite_transform.py  _coordinate_manager.py  _rodrigues.py  _rotation.py  _testing_helper.py  _viewing.py  affine_transform.py  composite.py  coordinate_manager.py  make_rodrigues_test_data.py  rigid_transform.py  rodrigues.py  rodrigues_test_assets.npz  rotation.py  teapot.npy  test_affine_transform.py  test_apply.py  test_composite.py  test_composite_transform.py  test_coordinate_manager.py  test_rigid_transform.py  test_rodrigues.py  test_rotation.py  test_translation.py  test_viewing.py  translation.py
polliwog/tri/: __init__.py  arity.py  barycentric.py  contains.py  functions.py  quad_faces.py  shapes.py  surface_normals.py  test_arity.py  test_barycentric.py  test_contains.py  test_functions.py  test_quad_faces.py  test_shapes.py  test_surface_normals.py
types/: CHANGELOG.md  LICENSE  README.md  package-lock.json  package.json
types/src/: dependency-graph.schema.ts  index.ts  schema.ts
